--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ attrs==23.2.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 frozenlist==1.4.1
+gunicorn==21.2.0
 idna==3.6
 multidict==6.0.4
+packaging==23.2
 PyJWT==2.8.0
 requests==2.31.0
 twilio==8.12.0
