--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,47 @@
 aiohttp==3.9.1
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==4.2.0
 async-timeout==4.0.3
 attrs==23.2.0
+blinker==1.7.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
+click==8.1.7
+dataclasses-json==0.6.3
+exceptiongroup==1.2.0
+Flask==3.0.1
 frozenlist==1.4.1
 gunicorn==21.2.0
 idna==3.6
+importlib-metadata==7.0.1
+itsdangerous==2.1.2
+Jinja2==3.1.3
+jsonpatch==1.33
+jsonpointer==2.4
+langchain==0.1.3
+langchain-community==0.0.15
+langchain-core==0.1.15
+langsmith==0.0.83
+MarkupSafe==2.1.4
+marshmallow==3.20.2
 multidict==6.0.4
+mypy-extensions==1.0.0
+numpy==1.24.4
 packaging==23.2
+pydantic==2.5.3
+pydantic_core==2.14.6
 PyJWT==2.8.0
+PyYAML==6.0.1
 requests==2.31.0
+sniffio==1.3.0
+SQLAlchemy==2.0.25
+tenacity==8.2.3
 twilio==8.12.0
+typing-inspect==0.9.0
+typing_extensions==4.9.0
 urllib3==2.1.0
+Werkzeug==3.0.1
 yarl==1.9.4
-Flask
+zipp==3.17.0
